nft-preview-card-component-main/style.css
@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600;700&display=swap");

/*Global values*/

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-size: 62.5%;
}

/********************************/

body {
  font-family: "Outfit", sans-serif;
  background-color: hsl(217, 54%, 11%);
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  line-height: 1;
  gap: 2rem;
  font-size: 1.8rem;
}

/********************************/
.container {
  border-radius: 16px;
  padding: 2.3rem;
  height: 60rem;
  width: 35rem;
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: repeat(3, 1fr);
  background-color: hsl(216, 50%, 16%);
  box-shadow: 0 50px 100px rgba(0, 0, 0, 0.2);
}

/*********** hover effect starts here ***********/
.main-img-box {
  position: relative;
}
.hover-img-icon {
  position: absolute;
  transition: all 0.3s ease-out;
  background-color: hsla(178, 100%, 50%, 0.4);
  border-radius: 10px;
  width: 100%;
  height: 100%;
  top: 0;
  opacity: 0;
}
.hover-img-icon img {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
}
.hover-img-icon:hover {
  opacity: 1;
}
/*********** hover effect ends here ***********/
.main-img-equilibrium {
  width: 100%;
  border-radius: 10px;
  grid-column: 1 / -1;
}
.main-description-container {
  margin-top: 2rem;
  display: flex;
  flex-direction: column;
  gap: 2rem;
}
.title {
  color: hsl(0, 0%, 100%);
  font-weight: 600;
  font-size: 2.1rem;
  transition: all 0.3s;
}
.title:hover {
  color: hsl(178, 100%, 50%);
}
.description {
  color: hsl(215, 51%, 70%);
  font-size: 1.8rem;
  line-height: 1.5;
  font-weight: 400;
}
main {
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-size: 1.7rem;
}
.secondary-container,
.tertiary-container {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 0.7rem;
}
.actual-value {
  color: hsl(178, 100%, 50%);
  font-weight: 600;
}
.tertiary-container p {
  color: hsl(215, 51%, 70%);
}
/*********** about author section ***********/
footer {
  display: flex;
  align-items: center;
  gap: 1.3rem;
  padding: 1.5rem 0 1rem;
  border-top: 1px solid hsl(215, 32%, 27%);
  font-size: 1.6rem;
}
.author-avatar {
  width: 3rem;
  border: 1px solid hsl(0, 0%, 100%);
  border-radius: 50%;
}
footer p {
  color: hsl(215, 51%, 70%);
}
footer span {
  color: hsl(0, 0%, 100%);
  transition: all 0.3s;
}
footer span:hover {
  color: hsl(178, 100%, 50%);
}
/*********** about author section ***********/

/*********** Media Queries ***********/


/*1040px*/
@media (max-width: 65em) {
  html {
    font-size: 60%;
  }
}

/*400px*/
@media (max-width: 25em) {
  html {
    font-size: 55%;
  }
}
/*320px*/
@media (max-width: 20em) {
  html {
    font-size: 50%;
  }
}
/*288px*/
@media (max-width: 18em) {
  html {
    font-size: 43.75%;
  }
}

